架构优化,大功能实现和调整